--- a/QuickPollUI/Shared/Button.razor
+++ b/QuickPollUI/Shared/Button.razor
@@ -39,6 +39,20 @@
 
 <style>
 
+    .login-btn {
+        border: 2px solid transparent;
+        background: #BF40BF;
+        color: #fff;
+        text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
+        box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
+    }
+
+        .login-btn:hover {
+            background: #fff;
+            color: #BF40BF;
+            border: 2px solid #BF40BF;
+        }
+
     .secondary {
         border: 2px solid transparent;
         background: #45c496;
