--- a/QuickPollUI/wwwroot/css/site.css
+++ b/QuickPollUI/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 @import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
-
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     background: #57595D;
