--- a/QuickPollUI/Components/ModalWrapper.razor
+++ b/QuickPollUI/Components/ModalWrapper.razor
@@ -8,7 +8,7 @@
         {
             <div class="d-flex justify-content-end">
                 <div class="d-flex justify-content-between">
-                    <label class="confirmation-text">I have copied and saved my link</label>
+                    <label class="confirmation-text">I have copied and saved my poll id</label>
                     <input class="checkbox-modal" type="checkbox" @bind="@copyConfirmation" />
                 </div>
 
@@ -65,6 +65,7 @@
 <style>
 
     .login-text {
+        font-weight: 700;
         color: #fff;
     }
 
@@ -84,7 +85,7 @@
         backdrop-filter: blur(10px);
         border: 3px solid #BF40BF;
         width: 40%;
-        padding: 1em;
+        padding: 2em;
         border-radius: 6px;
         box-shadow: inset 0 0 7.5px 3px rgba(0,0, 0, 0.8);
     }
