--- a/QuickPollUI/Pages/_Host.cshtml
+++ b/QuickPollUI/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <link href="QuickPollUI.styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -31,6 +32,7 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="JS/interop.js"></script>
+    <script src="https://kit.fontawesome.com/b078cd548f.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
