--- a/QuickPollUI/Shared/NavMenu.razor
+++ b/QuickPollUI/Shared/NavMenu.razor
@@ -1,37 +1,76 @@
-﻿@inject NavigationManager nav
+﻿@inject NavigationManager _nav
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Truth Poll</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+<nav class="nav-menu">
+    <div @onclick="NavigateHome" class="logo">Quick Poll</div>
+    <div class="">
+        <ul class="">
             <AuthorizeView>
                 <Authorized>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only"></span></a>
-                    </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/polls">Polls</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="MicrosoftIdentity/Account/SignOut">Log Out</a>
+                        <a class="nav-btn" href="MicrosoftIdentity/Account/SignOut">Log Out</a>
                     </li>
                 </Authorized>
                 <NotAuthorized>
                     <li class="nav-item">
-                        <a class="nav-link" href="MicrosoftIdentity/Account/SignIn">Log In</a>
+                        <a class="nav-btn" href="MicrosoftIdentity/Account/SignIn">Log In</a>
                     </li>
                 </NotAuthorized>
             </AuthorizeView>
         </ul>
     </div>
 </nav>
+
+@code {
+    private void NavigateHome()
+    {
+        _nav.NavigateTo("/");
+    }
+}
+
+<style>
+    .logo {
+        cursor: pointer;
+        font-family: 'Pacifico', cursive;
+        color: whitesmoke;
+        font-size: 3em;
+        margin: 0 1em;
+        text-shadow:  5px 0 20px #f0f,  -1px 0 10px #0ff,  5px 0 20px #f0f,  -1px 0 20px #0ff, 0 0 20px #fff, -1px 0 20px #f0f, 5px 0 20px #0ff;
+    }
+
+    li {
+       list-style-type: none;
+    }
+
+    .nav-btn {
+        text-decoration: none;
+        border: 1px solid #f0f;
+        border-radius: 6px;
+        padding: 7px 14px;
+        color: #f0f;
+        font-weight: 900;
+        transition: .25s ease;
+        text-shadow: 0 0 1px whitesmoke, 0 0 2px whitesmoke,0 0 3px whitesmoke;
+        box-shadow: inset 0 0 3px whitesmoke;
+        font-size: 1em;
+    }
+
+    .nav-btn:hover {
+       box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+            color: #BF40BF;
+        }
+    
+    .nav-menu {
+        display: flex;
+        justify-content: space-between;
+        padding: 1em;
+    }
+
+    .nav-item {
+        margin: 1.5em 4em;
+
+    }
+
+</style>
 
 
 
