HomeCard component, RenderFragment FrontFace RenderFragment BackFace

--- a/QuickPollUI/Components/ModalWrapper.razor
+++ b/QuickPollUI/Components/ModalWrapper.razor
@@ -76,12 +76,14 @@
     .confirmation-text {
         font-weight: 700;
         color: #fff;
+        margin: .5em auto;
     }
 
     .checkbox-modal {
-        margin: 0 1.25em;
+        margin: 0 1em;
         accent-color: #BF40BF;
         transform: scale(2);
+        cursor: pointer;
     }
 
     .Modal {
