--- a/QuickPollUI/Components/PollLinkInfo.razor
+++ b/QuickPollUI/Components/PollLinkInfo.razor
@@ -68,6 +68,7 @@
         color: #BF40BF;
         font-weight: 700;
         text-shadow: 0 0 2.5px #000, 0 0 5px #000, 0 0 7.5px #000, 0 0 10px #000;
+        margin: .5em .5em;
     }
 
     .nice {
