--- a/QuickPollUI/Pages/PollDetailsPage.razor
+++ b/QuickPollUI/Pages/PollDetailsPage.razor
@@ -120,6 +120,7 @@
         position: relative;
         border: 2px solid green;
         width: 70%;
+        margin: 0 auto;
     }
 
     .poll-question-text {
