--- a/QuickPollUI/Shared/Tooltip.razor
+++ b/QuickPollUI/Shared/Tooltip.razor
@@ -1,14 +1,10 @@
 ﻿
-
-
-
 <div class="wrapper">
     <div class="icon facebook">
         <span class="tooltip">@Text</span>
         @ChildContent
     </div>
 </div>
-
 
 @code {
     [Parameter] public RenderFragment ChildContent { get; set; }
@@ -19,27 +15,9 @@
 }
 
 <style>
-    .wrapper {
-   /* position: relative;
-    cursor: pointer;*/
-}
 
-    .wrapper .icon {
-        /*position: relative;
-        background: #ffffff;*/
-        /*border-radius: 50%;
-        padding: 15px;
-        margin: 10px;*/
-        /*width: auto;
-        height: 50px;
-        font-size: 18px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
-        cursor: pointer;
-        transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);*/
+    .tooltip {
+        font-weight: 700;
     }
 
     .wrapper .tooltip {
@@ -63,7 +41,6 @@
             bottom: -1.5em;
             border: 1em solid;
             border-color: @BgColor #0000 #0000 #0000;
-
         }
 
     .wrapper .icon:hover .tooltip {
@@ -79,10 +56,4 @@
         text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.1);
     }
 
- /*   .wrapper .facebook:hover,
-    .wrapper .facebook:hover .tooltip,
-    .wrapper .facebook:hover .tooltip::before {
-        color: #ffffff;
-            background: @BgColor;
-        }*/
 </style>
